--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -17539,6 +17539,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clearly the highest Average pressure is in Martian Month 9, and the lowest pressure is in Martian Month 6"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
